feat: updating styling to better match NCEAS
Added an Avenir-like font, changed header colors in css

Added a title-block-banner to the _quarto.yml with color from NCEAS page

--- a/inst/course_files/style.css
+++ b/inst/course_files/style.css
@@ -1,3 +1,18 @@
+/* NCEAS Learning Hub site uses Avenir... some free options on Google Fonts:
+   Sen, Figtree, Manrope, Montserrat
+*/
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+
+body {
+  font-family: Figtree, serif;
+  font-weight: 400;
+}
+
+h1, h2, h3 {
+  font-family: Figtree, serif;
+  font-weight: 700;
+}
+
 p.caption {
   color: #777;
   margin-top: 10px;
