--- a/inst/course_files/lh-style.css
+++ b/inst/course_files/lh-style.css
@@ -3,6 +3,14 @@
 */
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
 
+.navbar { /* what do I need to target here? */
+  height: 30px;
+  background-color: #0C4537;
+}
+.navbar-brand { /* Just the course name - not other nav elements */
+  font-size: 16px;
+}
+
 .quarto-title-block .title, .subtitle  {
   /* in elements with quarto-title-block class, change color for classes title and subtitle */
   color: white;
@@ -14,12 +22,13 @@
   background-image: url(logo-nceas.svg),
                     url(logo-lh-hex.png),
                     linear-gradient(to top right, #5C9341, #167B62, #0C4537, black);
-  /* Then the options apply to each image in turn.  The last (100% 200px) sets
-     both the width (100%) and height (200px) of the gradient to fit the block */
-  background-size: 100px, 130px, 100% 200px;
+  /* Then the options apply to each image in turn.  The last (100% 100px) sets
+     both the width (100%) and height (100px) of the gradient to fit the block */
+  background-size: 75px, 100px, 100% 100px;
   background-position: 10%, 90%, left;
   background-repeat: no-repeat, no-repeat;
   background-origin: content-box;
+  height: 100px;
 }
 
 body {
