feat: removing extension since it is installed from Github
coreR now installs the theme extension from Github so no need to keep a potentially outdated version here.

--- a/inst/lesson_slides/r_programming_introduction/lh_slides_style.scss
+++ b/inst/lesson_slides/r_programming_introduction/lh_slides_style.scss
@@ -1,34 +1,40 @@
 // import fonts
 /*@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&family=Playfair+Display:wght@400;600;800&display=swap');*/
 
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Nunito:wght@200;400;700&family=Playfair+Display:wght@400;600;800&family=Rubik:wght@400;500&display=swap');
+
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 
 /*-- scss:defaults --*/
 
 // colors
-$green: #348553;
-$light-green: #589244;
-$yellow: #E9A300;
-$red: #A23601;
-$white: #FFFFFF;
-$off-white: #F7F7F7;
-$gray: #ADADAD;
-$black: #525452;
+$lh-white: #FFFFFF;
+$lh-red: #A23923; // from LH style guide
+$lh-yellow: #DB9D26; // from LH style guide
+$lh-green: #167B62; // from NCEAS site LH header
+$lh-light-green: #a1cac0;
+$lh-purple: #4B0055; // viridis purple
+$lh-blue: #00588B; // viridis blue
+$lh-off-white: #F4F3EE;
+$lh-gray: #BCB8B1;
+$lh-black:  #08090A;
 
 // fonts
-$font-family-sans-serif: 'Nunito', sans-serf;
-$font-family-serif: 'Arvo', serif;
+$font-family-sans-serif: Figtree, Arial, sans-serif;
+$font-family-serif: Arvo, serif;
+$font-family-monospace: "Courier New", serif;
 
 // quarto vars
 $presentation-title-slide-text-align: "center";
 $presentation-font-size-root: 38px;
-$body-bg: $white;
-$link-color: $red;
-$body-color: $black;
-$code-color: $light-green;
-$code-bg: $white;
+$body-bg: $lh-white;
+$link-color: $lh-red;
+$body-color: $lh-black;
+$code-color: $lh-light-green;
+$code-bg: $lh-white;
 $code-block-font-size: 0.4em;
-$code-block-bg: $off-white;
+$code-block-bg: $lh-off-white;
 
 /*-- scss:rules --*/
 
@@ -36,7 +42,7 @@ $code-block-bg: $off-white;
 
 // horizontal line
 hr {
-  border: 5px solid $yellow;
+  border: 5px solid $lh-yellow;
   border-radius: 5px;
   margin-bottom: 30px;
 }
@@ -55,21 +61,22 @@ td {
 
 // red horizontal line
 .hr-red {
-  border: 5px solid $red;
+  border: 5px solid $lh-red;
   border-radius: 5px;
 }
 
 // see https://stackoverflow.com/questions/1734618/how-to-increase-the-gap-between-text-and-underlining-in-css
 .yellow-underline {
-  text-decoration: underline $yellow;
+  text-decoration: underline $lh-yellow;
   text-underline-offset: 10px; // https://developer.mozilla.org/en-US/docs/Web/CSS/text-underline-offset
   text-decoration-thickness: 4px;
 }
 
 // cover slide title
 .custom-title {
-  font-family: $font-family-serif;
-  color: $green;
+  font-family: $font-family-sans-serif;
+  font-weight: 700;
+  color: $lh-green;
   font-size: 5rem;
   left: 20px;
 }
@@ -77,7 +84,7 @@ td {
 // cover slide subtitle
 .custom-subtitle {
   font-family: $font-family-sans-serif;
-  color: $yellow;
+  color: $lh-yellow;
   font-size: 3.3rem;
   font-weight: 400;
   left: 20px;
@@ -99,24 +106,24 @@ td {
 
 // slide title
 .slide-title {
-  font-family: $font-family-serif;
-  color: $green;
+  font-family: $font-family-sans-serif;
+  color: $lh-green;
   font-size: 3.5rem;
-  font-weight: 400;
+  font-weight: 700;
 }
 
 // smaller slide title
 .slide-title-smaller {
-  font-family: $font-family-serif;
-  color: $green;
+  font-family: $font-family-sans-serif;
+  color: $lh-green;
   font-size: 3.1rem;
   font-weight: 400;
 }
 
 // smallest slide title
 .slide-title-smallest {
-  font-family: $font-family-serif;
-  color: $green;
+  font-family: $font-family-sans-serif;
+  color: $lh-green;
   font-size: 2.9rem;
   font-weight: 400;
 }
@@ -137,7 +144,7 @@ td {
 
 // white text
 .white-text {
-  color: $white;
+  color: $lh-white;
 }
 
 // center text
@@ -154,13 +161,13 @@ td {
 // styled image caption text
 .caption-text {
   font-size: 25px;
-  color: $gray;
+  color: $lh-gray;
 }
 
 // styled image caption text (smaller)
 .smaller-caption-text {
   font-size: 20px;
-  color: $gray;
+  color: $lh-gray;
 }
 
 // add extra space above text
